# ralph-zero

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
assets/examples/: ralph.json
assets/templates/: prompt_template.md
scripts/: ralph_zero.py
scripts/orchestrator/: agent.py  agent_api.py  agent_sdk.py  config.py  context.py  core.py  librarian.py  quality.py  state.py  utils.py
scripts/schemas/: prd.schema.json  ralph_config.schema.json
skills/prd/: SKILL.md
skills/ralph-convert/: SKILL.md
