[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-zero"
version = "0.1.0"
description = "Next-generation autonomous development orchestrator with cognitive feedback loops"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ralph Zero Team"}
]
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.5.0",
    "jsonschema>=4.17.0",
    "docopt>=0.6.2",
    "rich>=12.0.0",
    "GitPython>=3.1.0",
    "tiktoken>=0.5.0",
    "anthropic>=0.40.0",  # Direct API for stateless invocations
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
tiktoken = [
    "tiktoken>=0.5.0",
]

[project.scripts]
ralph-zero = "scripts.ralph_zero:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=scripts --cov-report=term-missing --cov-report=html"
